# native_db

./: .all-contributorsrc  .gitignore  .releaserc  .releaserc.TODO.md  05_update.expanded.1.rs  05_update.expanded.rs  Cargo.toml  Cross.toml  LICENSE  README.md  README.md.skt.md  RELEASE.md  build.rs  cargo_publish.sh  collected_comments.txt  justfile  release.config.js  renovate.json  tables.toml  version_update.sh
.github/workflows/: build_and_test.yml  build_and_test_release.yml  build_test_android.yml  build_test_ios.yml  build_test_linux.yml  build_test_macos.yml  build_test_wasi.yml  build_test_wasm.yml  build_test_windows.yml  ci.yml  clippy_check.yml  conventional_commits.yml  fmt_check.yml  pr_wait.yml  release.yml  release_automatic.yml  release_manual.yml
benches/: README.md  all.rs  overhead_data_size.rs  result.json  seconday_index.rs  setup.rs
book/: book.toml
book/src/: SUMMARY.md  advanced-queries.md  beyond-the-basics.md  crud-operations.md  data-migration.md  data-modeling.md  performance-optimization.md  troubleshooting-and-common-pitfalls.md  wathing-real-time-updates.md
example/: Cargo.toml  some.db
example/src/: main.rs
examples/: upgrade.rs
examples/major_upgrade/: Cargo.toml  README.md
examples/major_upgrade/src/: lib.rs  main_old.rs  new_main.rs
examples/major_upgrade/src/models/: current_version.rs  mod.rs  v08x.rs
examples/major_upgrade/tests/: test_main.rs  test_main_old.rs
multi_version_tests/: Cargo.toml  README.md
multi_version_tests/src/: lib.rs
multi_version_tests/tests/: compatibility.rs
native_db_macro/: Cargo.toml  README.md
native_db_macro/src/: crate_paths.rs  keys.rs  lib.rs  model_attributes.rs  model_native_db.rs  native_db.rs  struct_name.rs
server/: Cargo.toml
server/src/: api.rs  context.rs  error.rs  lib.rs
server/src/server/: layer.rs  mod.rs
src/: builder.rs  common.rs  database.rs  database_builder.rs  database_instance.rs  db.rs  item.rs  lib.rs  model.rs  models.rs  readable_table.rs  readonly_tables.rs  readonly_transaction.rs  schema.rs  serialization.rs  snapshot.rs  stats.rs  table_definition.rs  tables.rs  test_tuple_field_expanded copy.rs  transaction.rs  upgrade.rs
src/db_type/: error.rs  input.rs  mod.rs  output.rs  to_input.rs  upgrade_required_error.rs
src/db_type/key/: inner_key_value.rs  inner_key_value_redb1.rs  key.rs  key_definition.rs  key_serializer.rs  key_value.rs  mod.rs
src/iterator/: iterator.rs  iterator_by_key.rs  iterator_by_key_start_with.rs  iterator_start_with.rs  mod.rs  primary_iterator.rs  primary_iterator_start_with.rs  secondary_iterator.rs  secondary_iterator_start_with.rs
src/metadata/: current_version.rs  metadata.rs  mod.rs  table.rs
src/operation/write/: mod.rs
src/query/: mod.rs
src/transaction/: mod.rs  r_transaction.rs  rw_transaction.rs
src/transaction/internal/: mod.rs  private_readable_transaction.rs  r_transaction.rs  rw_transaction.rs
src/transaction/query/: drain.rs  get.rs  len.rs  mod.rs
src/transaction/query/scan/: mod.rs  primary_scan.rs  secondary_scan.rs
src/upgrade/: mod.rs  redb1_to_redb2.rs  secondary_index_table_multimap.rs
src/watch/: batch.rs  event.rs  filter.rs  mod.rs  request.rs  sender.rs
src/watch/query/: get.rs  internal.rs  mod.rs  scan.rs
struct_db_macro/: Cargo.toml  README.md
struct_db_macro/src/: lib.rs  model_attributes.rs  model_struct_db.rs  struct_db.rs
tests/: 00_bincode.rs  01_fn_primary_key.rs  02_simple_insert.rs  03_simple_insert_get.rs  04_simple_len.rs  05_update.rs  06_transaction.rs  07_simple_multithreads.rs  08_fn_key.rs  09_iterator.rs  10_remove.rs  11_watch.rs  11_watch_tokio.rs  12_migration.rs  13_util.rs  14_native_model.rs  check_integrity.rs  compact.rs  concurrent_upgrade.rs  convert_all.rs  create.rs  deserialization_error.rs  memory_allocation_tracking.rs  memory_leak.rs  memory_leak_cache_test.rs  memory_leak_debug.rs  memory_leak_fixed.rs  memory_leak_investigation.rs  memory_leak_macos_analysis.rs  memory_leak_with_cache_size.rs  modules.rs  multi_version.rs  native_model.rs  primary_custom_key.rs  primary_key.rs  refresh.rs  scan.rs  secondary_scan_operators.rs  signed_integer_ordering.rs  simple_multithreads.rs  (+10 more)
tests/check_type/: all.rs  mod.rs  struct_custom.rs  struct_simple.rs
tests/common/: memory_tracker.rs  mod.rs
tests/custom_type/: chrono.rs  custom.rs  mod.rs  ulid.rs  uuid.rs
tests/data/: db_0_5_x  db_0_6_0  db_0_7_1  db_0_8-pre-0  db_x_x_x
tests/macro_def/: export_keys_attribute.rs  mod.rs  only_primary_key.rs  primary_key.rs  primary_key_attribute.rs  secondary_key.rs  secondary_key_attribute.rs  secondary_key_mix.rs  with_secondary_keys.rs
tests/metadata/: current_version.rs  mod.rs
tests/migrate/: mod.rs  only_primary_key.rs  with_multiple_versions.rs  with_other_model.rs  with_secondary_keys.rs
tests/primary_drain/: only_primary_key.rs  with_secondary_keys.rs
tests/query/: auto_update_pk.rs  auto_update_sk.rs  insert_get_pk.rs  insert_get_sk.rs  insert_len_pk.rs  insert_len_sk.rs  insert_remove_pk.rs  insert_remove_sk.rs  insert_update_pk.rs  insert_update_sk.rs  mod.rs  upsert_get_pk.rs  upsert_get_sk.rs
tests/upgrade/: from_0_5_x_to_0_6_x.rs  from_0_7_x_to_0_8_x.rs  mod.rs
tests/watch/: mod.rs  watch_optional.rs
