[package]
name = "native_db"
version = "0.6.1"
authors = ["Vincent Herlemont <vincent@herlemont.fr>"]
edition = "2021"
description = "Drop-in embedded database"
license = "MIT"
repository = "https://github.com/vincent-herlemont/native_db"
readme = "README.md"
build = "build.rs"
keywords = ["embedded-database", "database", "multi-platform", "android", "ios"]
categories = ["database-implementations", "concurrency", "data-structures", "caching", "algorithms"]

[workspace]
members = ["native_db_macro"]

[dependencies]
redb = "2.1.1"
redb1 = { version = "=1.5.1", package = "redb", optional = true }
native_db_macro = { version = "0.6.1", path = "native_db_macro" }
thiserror = "1.0.61"
serde = { version = "1.0.203" }
native_model = { version = "0.4.19" }

uuid = { version = "1.8" , optional = true }
chrono = { version = "0.4.38" , optional = true }

# Optional tokio support
tokio = { version = "1.38.0", features = ["sync"], optional = true }
# TODO: channels with futures
# TODO: channels crossbeam

[dev-dependencies]
assert_fs = "1.1.1"
serial_test = { version = "3.1.1", features = ["file_locks"] }
shortcut_assert_fs = { version = "0.1.0" }
skeptic = "0.13.7"
tokio = { version = "1.38.0", features = ["test-util","macros"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
criterion = { version = "0.5.1" }
doc-comment = "0.3.3"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
once_cell = "1.19"
dinghy-test = "0.7.1"
itertools = "0.13"

[features]
default = [ "upgrade_0_5_x" ]
upgrade_0_5_x = [ "redb1" ]

[[bench]]
name = "overhead_data_size"
harness = false

[build-dependencies]
skeptic = "0.13.7"
