[package]
name = "native_db"
version = "0.8.1"
authors = ["Vincent Herlemont <vincent@herlemont.fr>"]
edition = "2021"
description = "Drop-in embedded database"
license = "MIT"
repository = "https://github.com/vincent-herlemont/native_db"
readme = "README.md"
build = "build.rs"
keywords = ["embedded-database", "database", "multi-platform", "android", "ios"]
categories = ["database-implementations", "concurrency", "data-structures", "caching", "algorithms"]

[workspace]
members = ["native_db_macro"]

[dependencies]
redb = "2.2.0"
redb1 = { version = "=1.5.1", package = "redb", optional = true }
native_db_macro = { version = "0.8.1", path = "native_db_macro" }
thiserror = "1.0"
serde = { version = "1.0" }
native_model = { version = "0.4.20" }
semver = "1"

# Optional tokio support
tokio = { version = "1.41.0", features = ["sync"], optional = true }
# TODO: channels with futures
# TODO: channels crossbeam


[dev-dependencies]
assert_fs = "1.1.2"
serial_test = { version = "3.1.1", features = ["file_locks"] }
shortcut_assert_fs = { version = "0.1.0" }
skeptic = "0.13.7"
tokio = { version = "1.41.0", features = ["test-util","macros"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
criterion = { version = "0.5.1" }
doc-comment = "0.3.3"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
once_cell = "1.20.2"
dinghy-test = "0.7.3"
itertools = "0.13"
include_dir = "0.7"
paste = "1.0.15"
cc = "1.1.34"
rusqlite = { version = "0.32.1", features = ["bundled"] }
concat-idents = "1.1.5"


[features]
default = [ "upgrade_0_5_x", "upgrade_0_7_x" ]
upgrade_0_5_x = [ "redb1" ]
upgrade_0_7_x = [ ]

[[bench]]
name = "all"
harness = false

[build-dependencies]
skeptic = "0.13.7"