[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
struct_db = "0.3"
serde = { version = "1.0", features = ["derive"] }
server = {path = "../server"}
anyhow = "1.0"
