[package]
name = "native_db_multi_version_tests"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
# Current version (from local path)
native_db_current = { package = "native_db", path = ".." }

# Previous version (from external path)
native_db_v0_8_1 = { package = "native_db", path = "../../native_db_0_8_x" }

# Common dependencies for testing
serde = { version = "1.0", features = ["derive"] }
native_model = { version = "0.6.2" }
tokio = { version = "1.45.0", features = ["test-util", "macros"] }

[[test]]
name = "compatibility"
path = "tests/compatibility.rs" 