[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
struct_db = "0.3"
axum = "0.6.9"
tokio = { version = "1.28.0", features = ["full"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
anyhow = "1.0"
tower-layer = "0.3"
hyper = "0.14"
tower-http = { version = "0.4", features = ["full"] }
env_logger = "0"
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
log="0"
pin-project-lite = "0"
