[package]
name = "struct_db_macro"
version = "0.3.8"
authors = ["Vincent Herlemont <vincent@herlemont.fr>"]
edition = "2018"
description = "A procedural macro for struct_db"
license = "MIT"
repository = "https://github.com/vincent-herlemont/struct_db"
readme = "README.md"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
